libs/error-stack/tests/snapshots/test_debug__sources_nested.snap
---
source: libs/error-stack/tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
context A
├╴at libs/error-stack/tests/test_debug.rs:209:10
├╴2
├╴1
│
╰┬▶ context A
 │  ├╴at libs/error-stack/tests/test_debug.rs:202:10
 │  ├╴4
 │  ├╴3
 │  │
 │  ╰─▶ root error
 │      ├╴at libs/error-stack/tests/common.rs:9:5
 │      ╰╴6
 │
 ╰▶ context A
    ├╴at libs/error-stack/tests/test_debug.rs:197:10
    ├╴5
    ├╴3
    │
    ├─▶ context A
    │   ├╴at libs/error-stack/tests/test_debug.rs:195:10
    │   ╰╴7
    │
    ╰┬▶ context A
     │  ├╴at libs/error-stack/tests/test_debug.rs:186:34
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ╰╴at libs/error-stack/tests/common.rs:9:5
     │
     ├▶ context A
     │  ├╴at libs/error-stack/tests/test_debug.rs:179:10
     │  ├╴13
     │  ├╴10
     │  ├╴16
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ╰╴at libs/error-stack/tests/common.rs:9:5
     │
     ├▶ context A
     │  ├╴at libs/error-stack/tests/test_debug.rs:167:10
     │  ├╴15
     │  ├╴14
     │  ├╴10
     │  ├╴16
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ╰╴at libs/error-stack/tests/common.rs:9:5
     │
     ├▶ context A
     │  ├╴at libs/error-stack/tests/test_debug.rs:176:30
     │  ├╴11
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ╰╴at libs/error-stack/tests/common.rs:9:5
     │
     ╰▶ context A
        ├╴at libs/error-stack/tests/test_debug.rs:173:10
        ├╴12
        ├╴9
        ├╴8
        │
        ├─▶ context A
        │   ╰╴at libs/error-stack/tests/test_debug.rs:172:10
        │
        ╰─▶ root error
            ╰╴at libs/error-stack/tests/common.rs:9:5
